Hopefully fixed some spacing

--- a/RoameoLogin.css
+++ b/RoameoLogin.css
@@ -22,8 +22,3 @@ body {
     height: 60%;
     width: 75%;
 }
-
-.fb-login-button {
-    margin: 0 auto;
-    padding-left: 12%;
-}
